<resources>
    <string name="app_name">SpendingTracker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_purchase">Add new purchase!</string>
    <string name="header">Add a new purchase!</string>
    <string name="purchaseType">What kind of purchase?</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="hello">Hello World</string>
    <string name="mainheading">Spending in last month:</string>
    <string name="viewbuttontext">View</string>
    <string name="viewpurchasetext">View all purchases of:</string>
    <string name="title_activity_display_purchases">DisplayPurchases</string>
</resources>
